--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.5"
-tokio = { version = "1", features = ["full"] }
+axum = "0.7.5"
+dotenv = "0.15.0"
+serde = { version = "1.0.160", features = ["derive"] }
+serde_json = "1.0.96"
+sqlx = { version = "0.8.0", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
+tokio = { version = "1.27.0", features = ["full"] }
+tower-http = { version = "0.5.0", features = ["cors"] }
+uuid = { version = "1.3.1", features = ["serde", "v4"] }
+bcrypt = "0.15.1"
