--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tokio = { version = "1.27.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["cors"] }
 uuid = { version = "1.3.1", features = ["serde", "v4"] }
 bcrypt = "0.15.1"
+refinery = { version = "0.8", features = ["mysql"]}
