--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ tower-http = { version = "0.5.0", features = ["cors"] }
 uuid = { version = "1.3.1", features = ["serde", "v4"] }
 bcrypt = "0.15.1"
 refinery = { version = "0.8", features = ["mysql"]}
+log = "0.4.22"
+tracing-subscriber = "0.3.18"
