--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ refinery = { version = "0.8", features = ["mysql"]}
 log = "0.4.22"
 tracing-subscriber = "0.3.18"
 sqlx = { version = "0.8.1", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
+jsonwebtoken = "9.3.0"
